--- a/app/views/factory/admin/produce_plans/_products/_product_tbody.html.erb
+++ b/app/views/factory/admin/produce_plans/_products/_product_tbody.html.erb
@@ -1,7 +1,8 @@
 <td><%= link_to model.name, { controller: 'productions', action: 'index', product_id: model.product_id, id: model.id }, text: true %></td>
 <td><%= model.price.to_money.format.html_safe %></td>
 <td>
-  <%= render partial: 'production_plan', locals: { production_plan: production_plan } %>
+  <%= button_to({ controller: 'production_plans', action: 'create', production_id: model.id }, params: { 'production_plan[scene_id]': @produce_plan.scene_id, 'production_plan[produce_on]': @produce_plan.produce_on }, class: 'ml-1') do %>
+    <i class="fa-solid fa-circle-plus text-grey"></i>
+    <span><%= t('.production_plans.create.title') %></span>
+  <% end %>
 </td>
-<td></td>
-<td></td>
